content: update reference list

--- a/references.bib
+++ b/references.bib
@@ -55,8 +55,6 @@
   year={2012}
 }
 
-
-
 @Book{russell2022statistics,
   title     = {Statistics in Natural Resources: Applications with R},
   publisher = {Chapman and Hall/CRC},
@@ -92,4 +90,13 @@
   author={Peng, Roger D},
   year={2016},
   publisher={Leanpub Victoria, BC, Canada}
+}
+
+@misc{R-FAQ,
+  author       = {{R Core Team}},
+  title        = {R FAQ: R Add-On Packages},
+  year         = {2024},
+  url          = {https://cran.r-project.org/doc/FAQ/R-FAQ.html#R-Add_002dOn-Packages},
+  note         = {Accessed: 2025-05-13},
+  howpublished = {\url{https://cran.r-project.org/doc/FAQ/R-FAQ.html#R-Add_002dOn-Packages}}
 }
